--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="#574FC8"
+    android:gravity="center_horizontal"
+    android:orientation="vertical"
+    >
 
-    <TextView
+
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/numberOfFlag"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Text1"
+            android:textSize="25sp"
+            android:textColor="#FFFFFF"
+            android:layout_marginTop="30dp"
+            android:layout_marginLeft="5dp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/numberOfBomb"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Text2"
+            android:textSize="25sp"
+            android:textColor="#FFFFFF"
+            android:layout_marginTop="30dp"
+            android:layout_marginLeft="30dp"  />
+
+        <Button
+            android:id="@+id/ButtomReset"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Btn1"
+            android:layout_marginTop="25dp"
+            android:layout_marginLeft="25dp"
+            android:textColor="#FFFFFF"
+            />
+        />
+
+        <Button
+            android:id="@+id/SwitchFlag"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="25dp"
+            android:showText="true"
+            android:text="Btn2" />
+
+    </LinearLayout>
+
+    <com.example.minesweepergame.CustomView
+        android:id="@+id/customview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="30dp"
+
+        />
+
+</LinearLayout>
