--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,7 @@
             android:id="@+id/ButtomReset"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Btn1"
+            android:text="Reset"
             android:layout_marginTop="25dp"
             android:layout_marginLeft="25dp"
             android:textColor="#FFFFFF"
