--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,24 +15,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <TextView
-            android:id="@+id/numberOfFlag"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Text1"
-            android:textSize="25sp"
-            android:textColor="#FFFFFF"
-            android:layout_marginTop="30dp"
-            android:layout_marginLeft="5dp" />
-
-        <TextView
             android:id="@+id/numberOfBomb"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Text2"
+            android:text="20 ⏣"
             android:textSize="25sp"
             android:textColor="#FFFFFF"
             android:layout_marginTop="30dp"
-            android:layout_marginLeft="30dp"  />
+            android:layout_marginLeft="15dp" />
+
+        <TextView
+            android:id="@+id/numberOfFlag"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0 ⚐"
+            android:textSize="25sp"
+            android:textColor="#FFFFFF"
+            android:layout_marginTop="30dp"
+            android:layout_marginLeft="15dp"  />
 
         <Button
             android:id="@+id/ButtomReset"
@@ -40,7 +40,7 @@
             android:layout_height="wrap_content"
             android:text="Reset"
             android:layout_marginTop="25dp"
-            android:layout_marginLeft="25dp"
+            android:layout_marginLeft="15dp"
             android:textColor="#FFFFFF"
             />
         />
@@ -49,10 +49,10 @@
             android:id="@+id/SwitchFlag"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
+            android:layout_marginLeft="15dp"
             android:layout_marginTop="25dp"
             android:showText="true"
-            android:text="Btn2" />
+            android:text="Marking" />
 
     </LinearLayout>
 
