Bonus: I changed the design, replacing a button with a switch button. I added numbers on the cells that show how many bombs are near the cell in question. Then I implemented the burst if it hits a cell without mine nearby. And I implemented a state of win and lose of the game. When the player has lost, the mines appear

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,23 +45,39 @@
             />
         />
 
-        <Button
+        <Switch
             android:id="@+id/SwitchFlag"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textOn="⚑"
+            android:textOff="⚐"
             android:layout_marginLeft="15dp"
             android:layout_marginTop="25dp"
             android:showText="true"
-            android:text="Marking" />
+            android:thumb="@drawable/custom_thumb"
+            android:track="@drawable/custom_track"
+
+            />
 
     </LinearLayout>
 
     <com.example.minesweepergame.CustomView
         android:id="@+id/customview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="413dp"
         android:layout_marginTop="30dp"
 
         />
+
+    <TextView
+        android:id="@+id/winText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=" "
+        android:layout_gravity="center"
+        android:textSize="25sp"
+        android:textColor="#FFFFFF"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="15dp"  />
 
 </LinearLayout>
